Makfiles: Use 'objs-$(CONFIG_FOO) +=' feature in Makefiles

--- a/arch/efm32/drivers/Makefile
+++ b/arch/efm32/drivers/Makefile
@@ -1,33 +1,8 @@
-
-ifeq ($(CONFIG_DRIVER_EFM32_LEUART), defined)
-subdirs += leuart
-endif
-
-ifeq ($(CONFIG_DRIVER_EFM32_USART), defined)
-subdirs += usart
-endif
-
-ifeq ($(CONFIG_DRIVER_EFM32_TIMER), defined)
-subdirs += timer 
-endif
-
-ifeq ($(CONFIG_DRIVER_EFM32_RTC), defined)
-subdirs += rtc 
-endif
-
-ifeq ($(CONFIG_DRIVER_EFM32_GPIO), defined)
-subdirs += gpio
-endif
-
-ifeq ($(CONFIG_DRIVER_EFM32_I2C), defined)
-subdirs += i2c
-endif
-
-ifeq ($(CONFIG_DRIVER_EFM32_RECMU), defined)
-subdirs += recmu
-endif
-
-ifeq ($(CONFIG_DRIVER_EFM32_MSC), defined)
-subdirs += msc
-endif
-
+subdirs-$(CONFIG_DRIVER_EFM32_LEUART) += leuart
+subdirs-$(CONFIG_DRIVER_EFM32_USART) += usart
+subdirs-$(CONFIG_DRIVER_EFM32_TIMER) += timer 
+subdirs-$(CONFIG_DRIVER_EFM32_RTC) += rtc 
+subdirs-$(CONFIG_DRIVER_EFM32_GPIO) += gpio
+subdirs-$(CONFIG_DRIVER_EFM32_I2C) += i2c
+subdirs-$(CONFIG_DRIVER_EFM32_RECMU) += recmu
+subdirs-$(CONFIG_DRIVER_EFM32_MSC) += msc
