--- a/arch/efm32/drivers/usart/Makefile
+++ b/arch/efm32/drivers/usart/Makefile
@@ -1,9 +1,2 @@
-
-ifeq ($(CONFIG_DRIVER_EFM32_USART_CHAR), defined)
-objs += usart_char.o
-endif
-
-ifeq ($(CONFIG_DRIVER_EFM32_USART_SPI), defined)
-objs += usart_spi.o
-endif
-
+objs-$(CONFIG_DRIVER_EFM32_USART_CHAR) += usart_char.o
+objs-$(CONFIG_DRIVER_EFM32_USART_SPI) += usart_spi.o
