--- a/arch/emu/Makefile
+++ b/arch/emu/Makefile
@@ -1,17 +1,10 @@
-
 objs =											\
 arch_init.o										\
 mem_init.o \
 power.o
 
-ifeq ($(CONFIG_ARCH_EMU_DARWIN),defined)
-objs += darwin_before.o darwin_after.o
-endif
-
-ifeq ($(CONFIG_HEXO_IRQ),defined)
-objs += interrupts.o
-endif
-
+objs-$(CONFIG_ARCH_EMU_DARWIN) += darwin_before.o darwin_after.o
+objs-$(CONFIG_HEXO_IRQ) += interrupts.o
 subdirs = include/arch/hexo drivers
 
 ifeq ($(LINKING),1)
