--- a/arch/gaisler/drivers/Makefile
+++ b/arch/gaisler/drivers/Makefile
@@ -1,25 +1,6 @@
-
-ifeq ($(CONFIG_DRIVER_GAISLER_APBUART), defined)
-subdirs += apbuart
-endif
-
-ifeq ($(CONFIG_DRIVER_GAISLER_AHBCTRL), defined)
-subdirs += ahbctrl
-endif
-
-ifeq ($(CONFIG_DRIVER_GAISLER_APBCTRL), defined)
-subdirs += apbctrl
-endif
-
-ifeq ($(CONFIG_DRIVER_GAISLER_IRQMP), defined)
-subdirs += irqmp
-endif
-
-ifeq ($(CONFIG_DRIVER_GAISLER_GPTIMER), defined)
-subdirs += gptimer
-endif
-
-ifeq ($(CONFIG_DRIVER_GAISLER_GRETH), defined)
-subdirs += greth
-endif
-
+subdirs-$(CONFIG_DRIVER_GAISLER_APBUART) += apbuart
+subdirs-$(CONFIG_DRIVER_GAISLER_AHBCTRL) += ahbctrl
+subdirs-$(CONFIG_DRIVER_GAISLER_APBCTRL) += apbctrl
+subdirs-$(CONFIG_DRIVER_GAISLER_IRQMP) += irqmp
+subdirs-$(CONFIG_DRIVER_GAISLER_GPTIMER) += gptimer
+subdirs-$(CONFIG_DRIVER_GAISLER_GRETH) += greth
