--- a/arch/raspberry/drivers/Makefile
+++ b/arch/raspberry/drivers/Makefile
@@ -1,20 +1,5 @@
-
-ifeq ($(CONFIG_DRIVER_ICU_BCM2835), defined)
-subdirs += bcm2835_icu
-endif
-
-ifeq ($(CONFIG_DRIVER_SYSTIMER_BCM2835), defined)
-subdirs += bcm2835_systimer
-endif
-
-ifeq ($(CONFIG_DRIVER_GPIO_BCM2835), defined)
-subdirs += bcm2835_gpio
-endif
-
-ifeq ($(CONFIG_DRIVER_SPI_BCM2835), defined)
-subdirs += bcm2835_spi
-endif
-
-ifeq ($(CONFIG_DRIVER_I2C_BCM2835), defined)
-subdirs += bcm2835_i2c
-endif
+subdirs-$(CONFIG_DRIVER_ICU_BCM2835) += bcm2835_icu
+subdirs-$(CONFIG_DRIVER_SYSTIMER_BCM2835) += bcm2835_systimer
+subdirs-$(CONFIG_DRIVER_GPIO_BCM2835) += bcm2835_gpio
+subdirs-$(CONFIG_DRIVER_SPI_BCM2835) += bcm2835_spi
+subdirs-$(CONFIG_DRIVER_I2C_BCM2835) += bcm2835_i2c
