--- a/arch/soclib/Makefile
+++ b/arch/soclib/Makefile
@@ -3,13 +3,8 @@ objs = 											\
 arch_init.o										\
 power.o
 
-ifneq ($(CONFIG_SOCLIB_PRINTK),undefined)
-objs += early_console.o
-endif
-
-ifeq ($(CONFIG_HEXO_MMU), defined)
-objs += mmu.o
-endif
+objs-$(CONFIG_SOCLIB_PRINTK) += early_console.o
+objs-$(CONFIG_HEXO_MMU) += mmu.o
 
 ifeq ($(LINKING),1)
 meta = ldscript
