--- a/arch/stm32/Makefile
+++ b/arch/stm32/Makefile
@@ -1,14 +1,5 @@
-
-objs =
-
-ifeq ($(CONFIG_BOARD_STM32_F401RE), defined)
-objs += board_stm32_f401re.o
-endif
-
-ifeq ($(CONFIG_STM32_PRINTK_UART), defined)
-objs += early_console.o
-endif
-
+objs-$(CONFIG_BOARD_STM32_F401RE) += board_stm32_f401re.o
+objs-$(CONFIG_STM32_PRINTK_UART) += early_console.o
 meta = ldscript
 
 subdirs = drivers
