--- a/arch/stm32/drivers/Makefile
+++ b/arch/stm32/drivers/Makefile
@@ -1,21 +1,5 @@
-
-ifeq ($(CONFIG_DRIVER_STM32_USART), defined)
-subdirs += usart
-endif
-
-ifeq ($(CONFIG_DRIVER_STM32_I2C), defined)
-subdirs += i2c
-endif
-
-ifeq ($(CONFIG_DRIVER_STM32_GPIO), defined)
-subdirs += gpio
-endif
-
-ifeq ($(CONFIG_DRIVER_STM32_RCC), defined)
-subdirs += rcc
-endif
-
-ifeq ($(CONFIG_DRIVER_STM32_PWM), defined)
-subdirs += pwm
-endif
-
+subdirs-$(CONFIG_DRIVER_STM32_USART) += usart
+subdirs-$(CONFIG_DRIVER_STM32_I2C) += i2c
+subdirs-$(CONFIG_DRIVER_STM32_GPIO) += gpio
+subdirs-$(CONFIG_DRIVER_STM32_RCC) += rcc
+subdirs-$(CONFIG_DRIVER_STM32_PWM) += pwm
