--- a/cpu/arm/drivers/Makefile
+++ b/cpu/arm/drivers/Makefile
@@ -1,13 +1,3 @@
-
-ifeq ($(CONFIG_DRIVER_CHAR_PL011), defined)
-subdirs += pl011uart
-endif
-
-ifeq ($(CONFIG_DRIVER_ICU_PL390), defined)
-subdirs += pl390icu
-endif
-
-ifeq ($(CONFIG_DRIVER_ARM_A9MPCORE), defined)
-subdirs += a9mpcore
-endif
-
+subdirs-$(CONFIG_DRIVER_CHAR_PL011) += pl011uart
+subdirs-$(CONFIG_DRIVER_ICU_PL390) += pl390icu
+subdirs-$(CONFIG_DRIVER_ARM_A9MPCORE) += a9mpcore
