--- a/cpu/lm32/Makefile
+++ b/cpu/lm32/Makefile
@@ -5,6 +5,4 @@ copy = ldscript
 
 subdirs = libc
 
-ifeq ($(CONFIG_DRIVER_CPU_LM32),defined)
-objs += driver.o
-endif
+objs-$(CONFIG_DRIVER_CPU_LM32) += driver.o
