--- a/cpu/mips/Makefile
+++ b/cpu/mips/Makefile
@@ -1,9 +1,7 @@
 
 objs = interrupt.o context_switch.o cpu_context.o boot.o
 
-ifeq ($(CONFIG_DRIVER_CPU_MIPS),defined)
-objs += driver.o
-endif
+objs-$(CONFIG_DRIVER_CPU_MIPS) += driver.o
 
 ifeq ($(LINKING),1)
 meta = ldscript
