--- a/drivers/block/Makefile
+++ b/drivers/block/Makefile
@@ -1,16 +1,5 @@
 
-ifeq ($(CONFIG_DRIVER_BLOCK_RAMDISK), defined)
- subdirs += ramdisk
-endif
-
-ifeq ($(CONFIG_DRIVER_BLOCK_PARTITION), defined)
- subdirs += partition
-endif
-
-ifeq ($(CONFIG_DRIVER_BLOCK_CACHE), defined)
- subdirs += cache
-endif
-
-ifeq ($(CONFIG_DRIVER_BLOCK_SD_MMC), defined)
- subdirs += sd-mmc
-endif
+subdirs-$(CONFIG_DRIVER_BLOCK_RAMDISK) += ramdisk
+subdirs-$(CONFIG_DRIVER_BLOCK_PARTITION) += partition
+subdirs-$(CONFIG_DRIVER_BLOCK_CACHE) += cache
+subdirs-$(CONFIG_DRIVER_BLOCK_SD_MMC) += sd-mmc
