--- a/drivers/enum/Makefile
+++ b/drivers/enum/Makefile
@@ -1,8 +1,2 @@
-
-ifeq ($(CONFIG_DRIVER_ENUM_PCI), defined)
- subdirs += pci
-endif
-
-ifeq ($(CONFIG_DRIVER_ENUM_FDT), defined)
- subdirs += fdt
-endif
+subdirs-$(CONFIG_DRIVER_ENUM_PCI) += pci
+subdirs-$(CONFIG_DRIVER_ENUM_FDT) += fdt
