--- a/drivers/lcd/Makefile
+++ b/drivers/lcd/Makefile
@@ -1,8 +1,2 @@
-
-ifeq ($(CONFIG_DRIVER_LCD_PCF8833), defined)
-subdirs += pcf8833
-endif
-
-ifeq ($(CONFIG_DRIVER_LCD_S1D15G00), defined)
-subdirs += s1d15g00
-endif
+subdirs-$(CONFIG_DRIVER_LCD_PCF8833) += pcf8833
+subdirs-$(CONFIG_DRIVER_LCD_S1D15G00) += s1d15g00
