--- a/examples/hello_het/Makefile
+++ b/examples/hello_het/Makefile
@@ -1,7 +1,4 @@
 
 objs = hello.o
 
-ifeq ($(CONFIG_HET_BUILD), defined)
-objs += platform-mips+arm.o
-endif
-
+objs-$(CONFIG_HET_BUILD) += platform-mips+arm.o
