--- a/liblua/libs/Makefile
+++ b/liblua/libs/Makefile
@@ -1,7 +1,4 @@
 
 objs += lauxlib.o lstrlib.o lbaselib.o ltablib.o linit.o ldblib.o
 
-ifeq ($(CONFIG_LIBTERMUI), defined)
- objs += libtermui.o
-endif
-
+objs-$(CONFIG_LIBTERMUI) += libtermui.o
