--- a/libnetwork/libsocket/Makefile
+++ b/libnetwork/libsocket/Makefile
@@ -1,19 +1,6 @@
 objs += socket.o inet.o
-
-ifeq ($(CONFIG_NETWORK_UDP), defined)
-  objs += socket_udp.o
-endif
-
-ifeq ($(CONFIG_NETWORK_TCP), defined)
-  objs += socket_tcp.o
-endif
-
-ifeq ($(CONFIG_NETWORK_SOCKET_PACKET), defined)
-  objs += socket_packet.o
-endif
-
-ifeq ($(CONFIG_NETWORK_SOCKET_RAW), defined)
-  objs += socket_raw.o
-endif
-
+objs-$(CONFIG_NETWORK_UDP) += socket_udp.o
+objs-$(CONFIG_NETWORK_TCP) += socket_tcp.o
+objs-$(CONFIG_NETWORK_SOCKET_PACKET) += socket_packet.o
+objs-$(CONFIG_NETWORK_SOCKET_RAW) += socket_raw.o
 
