--- a/arch/atmel/Makefile
+++ b/arch/atmel/Makefile
@@ -1,10 +1,7 @@
-
 objs =											\
 arch_init.o										\
 
-ifeq ($(CONFIG_MUTEK_PRINTK),defined)
-objs += early_console.o
-endif
+objs-$(CONFIG_MUTEK_PRINTK) += early_console.o
 
 meta = ldscript
 
