--- a/arch/efm32/Makefile
+++ b/arch/efm32/Makefile
@@ -1,29 +1,12 @@
 
 objs = arch_init.o
 
-ifeq ($(CONFIG_EFM32_STK3200),defined)
-objs += dev_stk3200.o
-endif
-
-ifeq ($(CONFIG_EFM32_STK3600),defined)
-objs += dev_stk3x00_678.o
-endif
-
-ifeq ($(CONFIG_EFM32_STK3700),defined)
-objs += dev_stk3x00_678.o
-endif
-
-ifeq ($(CONFIG_EFM32_STK3800),defined)
-objs += dev_stk3x00_678.o
-endif
-
-ifeq ($(CONFIG_EFM32_G8XX_STK),defined)
-objs += dev_g8xxstk.o
-endif
-
-ifeq ($(CONFIG_MUTEK_PRINTK),defined)
-objs += early_console.o
-endif
+objs-$(CONFIG_EFM32_STK3200) += dev_stk3200.o
+objs-$(CONFIG_EFM32_STK3600) += dev_stk3x00_678.o
+objs-$(CONFIG_EFM32_STK3700) += dev_stk3x00_678.o
+objs-$(CONFIG_EFM32_STK3800) += dev_stk3x00_678.o
+objs-$(CONFIG_EFM32_G8XX_STK) += dev_g8xxstk.o
+objs-$(CONFIG_MUTEK_PRINTK) += early_console.o
 
 meta = ldscript
 
