--- a/arch/gaisler/Makefile
+++ b/arch/gaisler/Makefile
@@ -1,9 +1,5 @@
-
 objs = arch_init.o device_ids.o
-
-ifneq ($(CONFIG_GAISLER_PRINTK),undefined)
-objs += early_console.o
-endif
+objs-$(CONFIG_GAISLER_PRINTK) += early_console.o
 
 ifeq ($(LINKING),1)
 meta = ldscript
