--- a/arch/ibmpc/drivers/tty_vga/Makefile
+++ b/arch/ibmpc/drivers/tty_vga/Makefile
@@ -2,7 +2,4 @@ objs = 											\
 tty-vga.o										\
 tty-vga-ansi.o
 
-ifeq ($(CONFIG_DRIVER_CHAR_VGATTY_KEYBOARD), defined)
- objs += tty-vga-i8042.o
-endif
-
+objs-$(CONFIG_DRIVER_CHAR_VGATTY_KEYBOARD) += tty-vga-i8042.o
