--- a/arch/soclib/drivers/Makefile
+++ b/arch/soclib/drivers/Makefile
@@ -1,36 +1,9 @@
-
-ifeq ($(CONFIG_DRIVER_SOCLIB_VCI_BLOCK_DEVICE), defined)
-subdirs += vci_block_device
-endif
-
-ifeq ($(CONFIG_DRIVER_SOCLIB_VCI_FRAME_BUFFER), defined)
-subdirs += vci_frame_buffer
-endif
-
-ifeq ($(CONFIG_DRIVER_SOCLIB_VCI_ICU), defined)
-subdirs += vci_icu
-endif
-
-ifeq ($(CONFIG_DRIVER_SOCLIB_VCI_MULTI_TTY), defined)
-subdirs += vci_multi_tty
-endif
-
-ifeq ($(CONFIG_DRIVER_SOCLIB_VCI_TIMER), defined)
-subdirs += vci_timer
-endif
-
-ifeq ($(CONFIG_DRIVER_SOCLIB_VCI_XICU), defined)
-subdirs += vci_xicu
-endif
-
-ifeq ($(CONFIG_DRIVER_SOCLIB_VCI_DMA), defined)
-subdirs += vci_dma
-endif
-
-ifeq ($(CONFIG_DRIVER_SOCLIB_VCI_ETHERNET), defined)
-subdirs += vci_ethernet
-endif
-
-ifeq ($(CONFIG_DRIVER_SOCLIB_VCI_SPI), defined)
-subdirs += vci_spi
-endif
+subdirs-$(CONFIG_DRIVER_SOCLIB_VCI_BLOCK_DEVICE) += vci_block_device
+subdirs-$(CONFIG_DRIVER_SOCLIB_VCI_FRAME_BUFFER) += vci_frame_buffer
+subdirs-$(CONFIG_DRIVER_SOCLIB_VCI_ICU) += vci_icu
+subdirs-$(CONFIG_DRIVER_SOCLIB_VCI_MULTI_TTY) += vci_multi_tty
+subdirs-$(CONFIG_DRIVER_SOCLIB_VCI_TIMER) += vci_timer
+subdirs-$(CONFIG_DRIVER_SOCLIB_VCI_XICU) += vci_xicu
+subdirs-$(CONFIG_DRIVER_SOCLIB_VCI_DMA) += vci_dma
+subdirs-$(CONFIG_DRIVER_SOCLIB_VCI_ETHERNET) += vci_ethernet
+subdirs-$(CONFIG_DRIVER_SOCLIB_VCI_SPI) += vci_spi
