--- a/arch/soclib/drivers/vci_xicu/Makefile
+++ b/arch/soclib/drivers/vci_xicu/Makefile
@@ -1,11 +1,3 @@
-
 objs = xicu.o
-
-ifeq ($(CONFIG_DRIVER_SOCLIB_VCI_XICU_TIMER), defined)
-objs += xicu_timer.o
-endif
-
-ifeq ($(CONFIG_DRIVER_SOCLIB_VCI_XICU_ICU), defined)
-objs += xicu_icu.o
-endif
-
+objs-$(CONFIG_DRIVER_SOCLIB_VCI_XICU_TIMER) += xicu_timer.o
+objs-$(CONFIG_DRIVER_SOCLIB_VCI_XICU_ICU) += xicu_icu.o
