--- a/cpu/nios2/Makefile
+++ b/cpu/nios2/Makefile
@@ -5,7 +5,5 @@ copy = ldscript
 
 subdirs = libc
 
-ifeq ($(CONFIG_DRIVER_CPU_NIOS2),defined)
-objs += driver.o
-endif
+objs-$(CONFIG_DRIVER_CPU_NIOS2) += driver.o
 
