--- a/cpu/ppc/Makefile
+++ b/cpu/ppc/Makefile
@@ -5,6 +5,4 @@ copy = ldscript
 
 subdirs = libc
 
-ifeq ($(CONFIG_DRIVER_CPU_PPC),defined)
-objs += driver.o
-endif
+objs-$(CONFIG_DRIVER_CPU_PPC) += driver.o
