--- a/cpu/sparc/Makefile
+++ b/cpu/sparc/Makefile
@@ -5,6 +5,4 @@ copy = ldscript
 
 subdirs = libc
 
-ifeq ($(CONFIG_DRIVER_CPU_SPARC),defined)
-objs += driver.o
-endif
+objs-$(CONFIG_DRIVER_CPU_SPARC) += driver.o
