--- a/drivers/char/Makefile
+++ b/drivers/char/Makefile
@@ -1,17 +1,4 @@
-
-ifeq ($(CONFIG_DRIVER_CHAR_RANDOM), defined)
- subdirs += random
-endif
-
-ifeq ($(CONFIG_DRIVER_CHAR_ZERO), defined)
- subdirs += zero
-endif
-
-ifeq ($(CONFIG_DRIVER_CHAR_NULL), defined)
- subdirs += null
-endif
-
-ifeq ($(CONFIG_DRIVER_CHAR_CADENCE_UART), defined)
- subdirs += cadence_uart
-endif
-
+subdirs-$(CONFIG_DRIVER_CHAR_RANDOM) += random
+subdirs-$(CONFIG_DRIVER_CHAR_ZERO) += zero
+subdirs-$(CONFIG_DRIVER_CHAR_NULL) += null
+subdirs-$(CONFIG_DRIVER_CHAR_CADENCE_UART) += cadence_uart
