--- a/drivers/spi/Makefile
+++ b/drivers/spi/Makefile
@@ -1,4 +1,1 @@
-
-ifeq ($(CONFIG_DRIVER_SPI_OPENCORES), defined)
- subdirs += oc_spi_controller
-endif
+subdirs-$(CONFIG_DRIVER_SPI_OPENCORES) += oc_spi_controller
