--- a/libcrypto/Makefile
+++ b/libcrypto/Makefile
@@ -3,15 +3,6 @@ DIR_CFLAGS = -D_HEXO_INTTYPES_DEPRECATED
 
 doc_headers = crypto/crypto.h crypto/arc4.h crypto/crc32.h
 
-ifeq ($(CONFIG_LIBCRYPTO_ARC4), defined)
-objs += arc4.o
-endif
-
-ifeq ($(CONFIG_LIBCRYPTO_CRC32), defined)
-objs += crc32.o
-endif
-
-ifeq ($(CONFIG_LIBCRYPTO_MD5), defined)
-objs += md5.o
-endif
-
+objs-$(CONFIG_LIBCRYPTO_ARC4) += arc4.o
+objs-$(CONFIG_LIBCRYPTO_CRC32) += crc32.o
+objs-$(CONFIG_LIBCRYPTO_MD5) += md5.o
