--- a/libnetwork/protocols/Makefile
+++ b/libnetwork/protocols/Makefile
@@ -1,15 +1,6 @@
 objs =
 
-ifeq ($(CONFIG_NETWORK_IPV4), defined)
- objs += arp.o ipv4.o icmpv4.o
-endif
-
-ifeq ($(CONFIG_NETWORK_UDP), defined)
- objs += udp.o
-endif
-
-ifeq ($(CONFIG_NETWORK_TCP), defined)
- objs += tcp.o
-endif
-
+ objs-$(CONFIG_NETWORK_IPV4) += arp.o ipv4.o icmpv4.o
+ objs-$(CONFIG_NETWORK_UDP) += udp.o
+ objs-$(CONFIG_NETWORK_TCP) += tcp.o
 
