--- a/libvfs/fs/fat/Makefile
+++ b/libvfs/fs/fat/Makefile
@@ -1,12 +1,7 @@
 objs += fat-dirent.o fat-file.o fat-sector-cache.o fat.o
 
-ifeq ($(CONFIG_DRIVER_FS_FAT16), defined)
-objs += fat16.o
-endif
-
-ifeq ($(CONFIG_DRIVER_FS_FAT32), defined)
-objs += fat32.o
-endif
+objs-$(CONFIG_DRIVER_FS_FAT16) += fat16.o
+objs-$(CONFIG_DRIVER_FS_FAT32) += fat32.o
 
 ifeq ($(CONFIG_DRIVER_FS_FAT_LFN), defined)
 objs += fat-lfn.o
