use the new config token flag to check cpu and arch conflicts

--- a/arch/emu/emu.config
+++ b/arch/emu/emu.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_ARCH_EMU
   desc UNIX Emulation platform support
-  parent CONFIG_ARCH_META
+  provide CONFIG_ARCH_META
   module arch Hexo
   provide CONFIG_ARCH_NAME=emu
   require CONFIG_ARCH_EMU_MEMORY
