--- a/arch/gaisler/gaisler.config
+++ b/arch/gaisler/gaisler.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_ARCH_GAISLER
   desc Gaisler Aeroflex platform support
-  parent CONFIG_ARCH_META
+  provide CONFIG_ARCH_META
   module arch Hexo
   provide CONFIG_ARCH_NAME=gaisler
   provide CONFIG_ARCH_SMP_CAPABLE
