--- a/arch/raspberry/raspberry.config
+++ b/arch/raspberry/raspberry.config
@@ -2,7 +2,7 @@
 %config CONFIG_ARCH_RASPBERRY
   desc Atmel platform support
   module arch Hexo
-  parent CONFIG_ARCH_META
+  provide CONFIG_ARCH_META
   provide CONFIG_ARCH_NAME=raspberry
   exclude CONFIG_ARCH_SMP CONFIG_ARCH_CLUSTER
 %config end
