--- a/arch/simple/simple.config
+++ b/arch/simple/simple.config
@@ -15,7 +15,7 @@
   desc Simple platform support
   module arch Hexo
   flags internal
-  parent CONFIG_ARCH_META
+  provide CONFIG_ARCH_META
 
   when CONFIG_ARCH_SIMPLE_SAM7
 
