--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_ARCH_SOCLIB
   desc SocLib platform support
-  parent CONFIG_ARCH_META
+  provide CONFIG_ARCH_META
   module arch Hexo
   provide CONFIG_ARCH_NAME=soclib
   provide CONFIG_ARCH_SMP_CAPABLE
