--- a/arch/zynq/zynq.config
+++ b/arch/zynq/zynq.config
@@ -1,7 +1,7 @@
 %config CONFIG_ARCH_ZYNQ
   desc Zynq platform support
   module arch Hexo
-  parent CONFIG_ARCH_META
+  provide CONFIG_ARCH_META
   provide CONFIG_ARCH_NAME=zynq
   exclude CONFIG_ARCH_CLUSTER CONFIG_ARCH_SMP_CAPABLE
 %config end
