--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -142,7 +142,7 @@
 
 %config CONFIG_CPU_ARM
   desc ARM processors support
-  parent CONFIG_CPU_META
+  provide CONFIG_CPU_META
   flags internal
   module cpu Hexo
 
