--- a/cpu/avr/avr.config
+++ b/cpu/avr/avr.config
@@ -29,7 +29,7 @@
   provide CONFIG_CPU_ENDIAN_LITTLE
   provide CONFIG_LIBC_STRING_ASM
   suggest CONFIG_MUTEK_MEMALLOC_ALIGN=1
-  parent CONFIG_CPU_META
+  provide CONFIG_CPU_META
   exclude CONFIG_HEXO_CONTEXT_NESTED
 %config end
 
