--- a/cpu/x86-emu/emu.config
+++ b/cpu/x86-emu/emu.config
@@ -14,7 +14,7 @@
   provide CONFIG_ARCH_EMU_PAGESIZE=4096
   provide CONFIG_CPU_WAIT_IRQ
   provide CONFIG_CPU_SMP_CAPABLE
-  parent CONFIG_CPU_META
+  provide CONFIG_CPU_META
   provide CONFIG_HEXO_STACK_ALIGN=16
   exclude CONFIG_HEXO_CONTEXT_NESTED
 %config end
