--- a/arch/arch.config
+++ b/arch/arch.config
@@ -1,9 +1,9 @@
 
 %config CONFIG_ARCH_SMP
   desc Support multi-processors systems
+  parent CONFIG_ARCH
   depend CONFIG_CPU_SMP_CAPABLE
   depend CONFIG_ARCH_SMP_CAPABLE
-  parent CONFIG_ARCH_META
   require CONFIG_ARCH_LAST_CPU_ID
   require CONFIG_ARCH_BOOTSTRAP_CPU_ID
   single CONFIG_LOAD_SMP_RESET_MERGED CONFIG_LOAD_SMP_RESET_SEPARATE CONFIG_LOAD_SMP_RESET_COPY CONFIG_LOAD_SMP_RESET_TEXT
@@ -31,27 +31,32 @@
 
 %config CONFIG_ARCH_CLUSTER
   desc Support multi-clusters systems
-  parent CONFIG_ARCH_META
-  depend CONFIG_ARCH_SMP
+  parent CONFIG_ARCH_SMP
 %config end
 
 ######################################################################
 
-%config CONFIG_ARCH_META
-  desc meta configuration token used to impose requirements
+%config CONFIG_ARCH
+  desc	Platform support root token
   flags	mandatory internal root
   require CONFIG_ARCH_NAME
-  single CONFIG_ARCH_IBMPC CONFIG_ARCH_SOCLIB CONFIG_ARCH_EMU CONFIG_ARCH_SIMPLE CONFIG_ARCH_GAISLER CONFIG_ARCH_ATMEL CONFIG_ARCH_RASPBERRY CONFIG_ARCH_ZYNQ CONFIG_ARCH_EFM32 CONFIG_ARCH_STM32
+  depend CONFIG_ARCH_META
+%config end
+
+%config CONFIG_ARCH_META
+  desc meta configuration token used to impose requirements
+  flags	meta single
+  parent CONFIG_ARCH
 %config end
 
 %config CONFIG_ARCH_SMP_CAPABLE
-  parent CONFIG_CPU_META
+  parent CONFIG_ARCH
   desc Platform is designed to support multi-processor operation
   flags meta
 %config end
 
 %config CONFIG_ARCH_NOT_SMP_CAPABLE
-  parent CONFIG_CPU_META
+  parent CONFIG_ARCH
   desc No support for multi-processors systems
   when CONFIG_ARCH_SMP_CAPABLE!
   flags internal
@@ -61,8 +66,8 @@
 # Provided token, not definable by user directly
 
 %config CONFIG_ARCH_NAME
+  parent CONFIG_ARCH
   desc	Platform name configuration token
-  parent CONFIG_ARCH_META
   flags	internal value
 %config end
 
