--- a/arch/atmel/atmel.config
+++ b/arch/atmel/atmel.config
@@ -2,7 +2,7 @@
 %config CONFIG_ARCH_ATMEL
   desc Atmel platform support
   module arch Hexo
-  parent CONFIG_ARCH_META
+  provide CONFIG_ARCH_META
   provide CONFIG_ARCH_NAME=atmel
 %config end
 
