--- a/arch/ibmpc/ibmpc.config
+++ b/arch/ibmpc/ibmpc.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_ARCH_IBMPC
   desc IBM PC platform support
-  parent CONFIG_ARCH_META
+  provide CONFIG_ARCH_META
   module arch Hexo
   provide CONFIG_ARCH_NAME=ibmpc
   provide CONFIG_ARCH_SMP_CAPABLE
