--- a/arch/stm32/stm32.config
+++ b/arch/stm32/stm32.config
@@ -2,7 +2,7 @@
 %config CONFIG_ARCH_STM32
   desc STMicroelectronics STM32 platform support
   module arch Hexo
-  parent CONFIG_ARCH_META
+  provide CONFIG_ARCH_META
   provide CONFIG_ARCH_NAME=stm32
   exclude CONFIG_ARCH_SMP CONFIG_ARCH_CLUSTER
 %config end
