--- a/cpu/avr32/avr32.config
+++ b/cpu/avr32/avr32.config
@@ -32,7 +32,7 @@
 
 %config CONFIG_CPU_AVR32
   desc Avr32 processors support
-  parent CONFIG_CPU_META
+  provide CONFIG_CPU_META
   flags internal private
 
   when CONFIG_CPU_AVR32_AP7
