--- a/cpu/lm32/lm32.config
+++ b/cpu/lm32/lm32.config
@@ -19,7 +19,7 @@
 
 %config CONFIG_CPU_LM32
   desc Lm32 processors support
-  parent CONFIG_CPU_META
+  provide CONFIG_CPU_META
   flags internal private
 
   when CONFIG_CPU_LM32_SOCLIB
