--- a/cpu/mips/mips.config
+++ b/cpu/mips/mips.config
@@ -64,7 +64,7 @@
 
 %config CONFIG_CPU_MIPS
   desc Mips processors support
-  parent CONFIG_CPU_META
+  provide CONFIG_CPU_META
   flags internal private
   module cpu Hexo
 
