--- a/cpu/nios2/nios.config
+++ b/cpu/nios2/nios.config
@@ -29,7 +29,7 @@
 
 %config CONFIG_CPU_NIOS2
   desc Nios2 processor support
-  parent CONFIG_CPU_META
+  provide CONFIG_CPU_META
   flags internal private
   
   when CONFIG_CPU_NIOS2_SOCLIB
