--- a/cpu/ppc/ppc.config
+++ b/cpu/ppc/ppc.config
@@ -30,7 +30,7 @@
 
 %config CONFIG_CPU_PPC
   desc PowerPC processors support
-  parent CONFIG_CPU_META
+  provide CONFIG_CPU_META
   flags internal private
 
   when CONFIG_CPU_PPC_SOCLIB
