--- a/cpu/sparc/sparc.config
+++ b/cpu/sparc/sparc.config
@@ -63,7 +63,7 @@
 
 %config CONFIG_CPU_SPARC
   desc Sparc processors support
-  parent CONFIG_CPU_META
+  provide CONFIG_CPU_META
   flags internal private
 
   when CONFIG_CPU_SPARC_SOCLIB
