--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -15,7 +15,7 @@
   provide CONFIG_CPU_NONALIGNED_ACCESS
   provide CONFIG_CPU_WAIT_IRQ
   provide CONFIG_CPU_SMP_CAPABLE
-  parent CONFIG_CPU_META
+  provide CONFIG_CPU_META
   require CONFIG_HEXO_STACK_ALIGN>=8
 
   provide CONFIG_CPU_RESET_ADDR=0x000ffff0
