--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -291,6 +291,13 @@
   parent CONFIG_MUTEK_SCHEDULER
 %config end
 
+%config CONFIG_MUTEK_THREAD
+  flags auto
+  parent CONFIG_MUTEK
+  desc Provide generic thread based on scheduler context
+  depend CONFIG_MUTEK_SCHEDULER
+%config end
+
 %config CONFIG_MUTEK_RWLOCK
   flags auto
   parent CONFIG_MUTEK
