--- a/libdevice/Makefile
+++ b/libdevice/Makefile
@@ -7,6 +7,7 @@ doc_headers =  device/device.h  device/driver.h device/irq.h device/resources.h 
 	device/class/icu.h device/class/net.h device/class/cpu.h	\
 	device/class/timer.h device/class/dma.h \
     device/class/i2c.h device/class/spi.h \
+    device/class/uart.h \
     device/class/valio.h
 
 enum_headers = device/driver.h device/device.h device/class/mem.h \
