--- a/arch/nrf51/drivers/drivers.config
+++ b/arch/nrf51/drivers/drivers.config
@@ -34,6 +34,28 @@
   depend CONFIG_DRIVER_NRF51_PPI
 %config end
 
+# Memory controller
+
+%config CONFIG_DRIVER_NRF51_NVMC
+  desc Enable nRF51 Non volatile memory controller
+  parent CONFIG_ARCH_NRF51
+  depend CONFIG_DEVICE_MEM
+%config end
+
+%config CONFIG_DRIVER_NRF51_PERSIST
+  desc Enable nRF51 Persistant storage controller
+  parent CONFIG_ARCH_NRF51
+  depend CONFIG_DEVICE_DELAYED_REQUEST
+  depend CONFIG_DEVICE_PERSIST
+%config end
+
+%config CONFIG_DRIVER_NRF51_PERSIST_SIZE
+  desc Persistant storage size
+  parent CONFIG_DRIVER_NRF51_PERSIST
+  flags value
+  default 2048
+%config end
+
 # I2C
 
 %config CONFIG_DRIVER_NRF51_I2C
