--- a/arch/nrf51/drivers/drivers.config
+++ b/arch/nrf51/drivers/drivers.config
@@ -56,6 +56,12 @@
   default 2048
 %config end
 
+%config CONFIG_DRIVER_NRF51_RAM
+  desc Enable nRF51 RAM controller
+  parent CONFIG_ARCH_NRF51
+  depend CONFIG_DEVICE_MEM
+%config end
+
 # I2C
 
 %config CONFIG_DRIVER_NRF51_I2C
