added support for delayed device requests

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -88,6 +88,13 @@
   flags auto
 %config end
 
+%config CONFIG_DEVICE_DELAYED_REQUEST
+  parent CONFIG_DEVICE
+  desc .
+  flags auto
+  depend CONFIG_MUTEK_KROUTINE_SCHED_SWITCH
+%config end
+
 %config CONFIG_DEVICE_CPU
   parent CONFIG_DEVICE
   flags auto
