--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -373,3 +373,9 @@
   desc Enable device related commands in the shell
 %config end
 
+%config CONFIG_DEVICE_CRYPTO
+  parent CONFIG_DEVICE
+  flags auto
+  desc Enable crypto devices support
+%config end
+
