arch/nrf5x: Add Timer driver

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -156,6 +156,15 @@
   depend CONFIG_DEVICE_IRQ
 %config end
 
+# TIMER
+
+%config CONFIG_DRIVER_NRF5X_TIMER
+  desc Enable nRF5x Timer driver
+  parent CONFIG_ARCH_NRF5X
+  depend CONFIG_DEVICE_TIMER
+  depend CONFIG_DEVICE_IRQ
+%config end
+
 # SPI
 
 %config CONFIG_DRIVER_NRF5X_SPI
