arch/nrf51: Add Timer driver

--- a/arch/nrf51/drivers/Makefile
+++ b/arch/nrf51/drivers/Makefile
@@ -9,3 +9,4 @@ ifneq ($(CONFIG_DRIVER_NRF51_NVMC)$(CONFIG_DRIVER_NRF51_PERSIST),undefinedundefi
 objs += nvmc.o
 endif
 objs-$(CONFIG_DRIVER_NRF51_RAM) += ram.o
+objs-$(CONFIG_DRIVER_NRF51_TIMER) += timer.o
