--- a/arch/nrf51/drivers/drivers.config
+++ b/arch/nrf51/drivers/drivers.config
@@ -81,6 +81,15 @@
   depend CONFIG_DEVICE_IRQ
 %config end
 
+# TIMER
+
+%config CONFIG_DRIVER_NRF51_TIMER
+  desc Enable nRF51 Timer driver
+  parent CONFIG_ARCH_NRF51
+  depend CONFIG_DEVICE_TIMER
+  depend CONFIG_DEVICE_IRQ
+%config end
+
 # SPI
 
 %config CONFIG_DRIVER_NRF51_SPI
