efm32: added AES device driver

--- a/arch/efm32/drivers/Makefile
+++ b/arch/efm32/drivers/Makefile
@@ -6,4 +6,5 @@ subdirs-$(CONFIG_DRIVER_EFM32_GPIO) += gpio
 subdirs-$(CONFIG_DRIVER_EFM32_I2C) += i2c
 subdirs-$(CONFIG_DRIVER_EFM32_RECMU) += recmu
 subdirs-$(CONFIG_DRIVER_EFM32_MSC) += msc
+subdirs-$(CONFIG_DRIVER_EFM32_AES) += aes
 subdirs-$(CONFIG_DRIVER_EFM32_PWM) += pwm
