libdevice: add shell commands for I2C

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -337,3 +337,10 @@
   desc Enable crypto devices support
 %config end
 
+%config CONFIG_DEVICE_SHELL_I2C_TRANSFER_MAX
+  parent CONFIG_DEVICE_SHELL
+  desc Define the number of maximum transfers sent from shell
+  flags value
+  default 16
+%config end
+
