--- a/libdevice/Makefile
+++ b/libdevice/Makefile
@@ -11,7 +11,7 @@ doc_headers =  device/device.h  device/driver.h device/irq.h device/resources.h 
     device/class/mem.h \
     device/class/valio.h
 
-enum_headers = device/driver.h device/device.h device/class/mem.h \
+enum_headers = device/types.h device/driver.h device/device.h device/class/mem.h \
                device/class/pwm.h device/class/crypto.h device/class/timer.h
 
 objs = driver.o device.o resources.o init.o request.o
