added missing init order constraint on cpu fault handler setup

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -110,7 +110,8 @@
 
 %init INIT_MUTEK_FAULT_HANDLER
   parent CONFIG_MUTEK
-  desc Setup a processor fault handler which
+  desc Setup a processor fault handler
+  after INIT_DEVICE_CPU_REGS  # we need cpu local variables
   during INIT_CPUS
   function mutek_fault_initsmp
 %init end
