soclib: striped vci_ prefix from driver names

--- a/arch/soclib/drivers/Makefile
+++ b/arch/soclib/drivers/Makefile
@@ -1,9 +1,9 @@
-subdirs-$(CONFIG_DRIVER_SOCLIB_VCI_BLOCK_DEVICE) += vci_block_device
-subdirs-$(CONFIG_DRIVER_SOCLIB_VCI_FRAME_BUFFER) += vci_frame_buffer
-subdirs-$(CONFIG_DRIVER_SOCLIB_VCI_ICU) += vci_icu
-subdirs-$(CONFIG_DRIVER_SOCLIB_VCI_MULTI_TTY) += vci_multi_tty
-subdirs-$(CONFIG_DRIVER_SOCLIB_VCI_TIMER) += vci_timer
-subdirs-$(CONFIG_DRIVER_SOCLIB_VCI_XICU) += vci_xicu
-subdirs-$(CONFIG_DRIVER_SOCLIB_VCI_DMA) += vci_dma
-subdirs-$(CONFIG_DRIVER_SOCLIB_VCI_ETHERNET) += vci_ethernet
-subdirs-$(CONFIG_DRIVER_SOCLIB_VCI_SPI) += vci_spi
+subdirs-$(CONFIG_DRIVER_SOCLIB_BLOCK_DEVICE) += block_device
+subdirs-$(CONFIG_DRIVER_SOCLIB_FRAME_BUFFER) += frame_buffer
+subdirs-$(CONFIG_DRIVER_SOCLIB_ICU) += icu
+subdirs-$(CONFIG_DRIVER_SOCLIB_MULTI_TTY) += multi_tty
+subdirs-$(CONFIG_DRIVER_SOCLIB_TIMER) += timer
+subdirs-$(CONFIG_DRIVER_SOCLIB_XICU) += xicu
+subdirs-$(CONFIG_DRIVER_SOCLIB_DMA) += dma
+subdirs-$(CONFIG_DRIVER_SOCLIB_ETHERNET) += ethernet
+subdirs-$(CONFIG_DRIVER_SOCLIB_SPI) += spi
