changed arch/raspberry into arch/bcm2835

--- a/arch/bcm2835/drivers/gpio/gpio.config
+++ b/arch/bcm2835/drivers/gpio/gpio.config
@@ -1,13 +1,13 @@
 
-%config CONFIG_DRIVER_GPIO_BCM2835
+%config CONFIG_DRIVER_BCM2835_GPIO
   desc Provide support for Broadcom BCM2835 soc GPIO controller.
-  parent CONFIG_ARCH_RASPBERRY
+  parent CONFIG_ARCH_BCM2835
   depend CONFIG_DEVICE_GPIO
 %config end
 
-%config CONFIG_DRIVER_GPIO_BCM2835_ICU
+%config CONFIG_DRIVER_BCM2835_GPIO_ICU
   desc Enable use of the BCM2835 GPIO as an irq controller
-  parent CONFIG_DRIVER_GPIO_BCM2835
+  parent CONFIG_DRIVER_BCM2835_GPIO
   depend CONFIG_DEVICE_ICU
   default defined
 %config end
