--- a/arch/bcm2835/drivers/i2c/i2c.config
+++ b/arch/bcm2835/drivers/i2c/i2c.config
@@ -1,7 +1,7 @@
 
-%config CONFIG_DRIVER_I2C_BCM2835
+%config CONFIG_DRIVER_BCM2835_I2C
   desc Enable BCM2835 I2C driver
-  parent CONFIG_ARCH_RASPBERRY
+  parent CONFIG_ARCH_BCM2835
   depend CONFIG_DEVICE_I2C
   depend CONFIG_DEVICE_IRQ
 %config end
