--- a/arch/bcm2835/drivers/systimer/systimer.config
+++ b/arch/bcm2835/drivers/systimer/systimer.config
@@ -1,7 +1,7 @@
 
-%config CONFIG_DRIVER_SYSTIMER_BCM2835
+%config CONFIG_DRIVER_BCM2835_SYSTIMER
   desc Provide support for Broadcom BCM2835 system timer.
-  parent CONFIG_ARCH_RASPBERRY
+  parent CONFIG_ARCH_BCM2835
   depend CONFIG_DEVICE_TIMER
   suggest CONFIG_DEVICE_IRQ
 %config end
