--- a/arch/bcm2835/drivers/icu/icu.config
+++ b/arch/bcm2835/drivers/icu/icu.config
@@ -1,7 +1,7 @@
 
-%config CONFIG_DRIVER_ICU_BCM2835
+%config CONFIG_DRIVER_BCM2835_ICU
   desc Provide support for Broadcom BCM2835 soc irq controller.
-  parent CONFIG_ARCH_RASPBERRY
+  parent CONFIG_ARCH_BCM2835
   depend CONFIG_DEVICE_ICU
 %config end
 
