--- a/arch/bcm2835/drivers/spi/spi.config
+++ b/arch/bcm2835/drivers/spi/spi.config
@@ -1,7 +1,7 @@
-%config CONFIG_DRIVER_SPI_BCM2835
+%config CONFIG_DRIVER_BCM2835_SPI
   desc Enable BCM2835 SPI controller class driver
   depend CONFIG_DEVICE_SPI
-  parent CONFIG_ARCH_RASPBERRY
+  parent CONFIG_ARCH_BCM2835
   suggest CONFIG_DEVICE_IRQ
   default defined
 %config end
