--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -219,3 +219,22 @@
   flags value
   default 1000000
 %config end
+
+# Crypto
+
+%config CONFIG_DRIVER_NRF5X_AES
+  desc Enable nRF5x AES-128 driver
+  parent CONFIG_ARCH_NRF5X
+  depend CONFIG_DEVICE_CRYPTO
+  depend CONFIG_DEVICE_DELAYED_REQUEST
+%config end
+
+%config CONFIG_DRIVER_NRF5X_AES_RANDOM
+  desc Enable nRF5x AES-128-based DRBG
+  parent CONFIG_DRIVER_NRF5X_AES
+%config end
+
+%config CONFIG_DRIVER_NRF5X_AES_CMAC
+  desc Enable nRF5x AES-CMAC
+  parent CONFIG_DRIVER_NRF5X_AES
+%config end
