arch/nrf51: Add ECB driver

--- a/arch/nrf51/drivers/drivers.config
+++ b/arch/nrf51/drivers/drivers.config
@@ -194,3 +194,27 @@
   desc Enable nRF51 Radio Debug code
   parent CONFIG_DRIVER_NRF51_BLE_RADIO
 %config end
+
+# Crypto
+
+%config CONFIG_DRIVER_NRF51_AES
+  desc Enable nRF51 AES-128 driver
+  parent CONFIG_ARCH_NRF51
+  depend CONFIG_DEVICE_CRYPTO
+  depend CONFIG_DEVICE_DELAYED_REQUEST
+%config end
+
+%config CONFIG_DRIVER_NRF51_AES_RANDOM
+  desc Enable nRF51 AES-128-based DRBG
+  parent CONFIG_DRIVER_NRF51_AES
+%config end
+
+%config CONFIG_DRIVER_NRF51_AES_CMAC
+  desc Enable nRF51 AES-CMAC
+  parent CONFIG_DRIVER_NRF51_AES
+%config end
+
+%config CONFIG_DRIVER_NRF51_AES_CCM
+  desc Enable nRF51 Ble-specific CCM
+  parent CONFIG_DRIVER_NRF51_AES
+%config end
