stm32: code clean-up and platform development restart
This commit is a work in progress for restarting the development of MutekH on
the STM32 architecture.

--- a/arch/stm32/Makefile
+++ b/arch/stm32/Makefile
@@ -1,5 +1,7 @@
-objs-$(CONFIG_BOARD_STM32_F401RE) += board_stm32_f401re.o
-objs-$(CONFIG_STM32_PRINTK_UART) += early_console.o
+objs += arch_init.o
+
+objs-$(CONFIG_BOARD_STM32_NUCLEOF401RE) += boards/nucleo_f401re.o
+
 meta = ldscript
 
 subdirs = drivers
