--- a/arch/stm32/drivers/usart/usart.config
+++ b/arch/stm32/drivers/usart/usart.config
@@ -8,10 +8,32 @@
   suggest CONFIG_DEVICE_IRQ
 %config end
 
+%config CONFIG_DRIVER_STM32_USART_PRINTK
+  desc Enable STM32 early console
+  parent CONFIG_DRIVER_STM32_USART
+  depend CONFIG_MUTEK_PRINTK
+  provide CONFIG_MUTEK_PRINTK_HANDLER
+  require CONFIG_DRIVER_STM32_USART_PRINTK_BAUDRATE
+  flags auto
+%config end
+
+%config CONFIG_DRIVER_STM32_USART_PRINTK_BAUDRATE
+  desc Baudrate used for STM32 early console
+  parent CONFIG_DRIVER_STM32_USART_PRINTK
+  flags value
+  default 115200
+%config end
+
 %config CONFIG_DRIVER_STM32_USART_SWFIFO
   desc Depth of USART software FIFO (0 disable the FIFO).
   parent CONFIG_DRIVER_STM32_USART
   flags value
   default 0
 %config end
+
+%init INIT_DRIVER_STM32_USART_PRINTK
+  parent CONFIG_DRIVER_STM32_USART_PRINTK
+  during INIT_MUTEK_PRINTK
+  function stm32_usart_printk_init
+%init end
 
