--- a/arch/stm32/stm32.config
+++ b/arch/stm32/stm32.config
@@ -1,10 +1,18 @@
 
+%config CONFIG_DEVICE_HELPER_PREFIX
+  desc Device helper prefix
+  parent CONFIG_DEVICE
+  flags value
+  default
+%config end
+
 %config CONFIG_ARCH_STM32
   desc STMicroelectronics STM32 platform support
   module arch Hexo
   provide CONFIG_ARCH_META
   provide CONFIG_ARCH_NAME=stm32
   exclude CONFIG_ARCH_SMP CONFIG_ARCH_CLUSTER
+  provide CONFIG_DEVICE_HELPER_PREFIX=STM32
 %config end
 
 %init INIT_STM32_MEM_ALLOC
@@ -13,49 +21,32 @@
   function stm32_mem_init
 %init end
 
-%config CONFIG_STM32_PRINTK_UART
-  desc STM32 early console output uses an UART device
+%init INIT_STM32_CLOCK
   parent CONFIG_ARCH_STM32
-  provide CONFIG_MUTEK_PRINTK_HANDLER
+  during INIT_BOOTSTRAP
+  after INIT_MEMORY_SECTIONS
+  before INIT_MUTEK_MEMALLOC
+  function stm32_clock_init
+%init end
+
+%config CONFIG_STM32_F401
+  desc STM32 F401 microcontroller
+  parent CONFIG_ARCH_STM32
+  flags auto
 %config end
 
 %config CONFIG_BOARD_STM32
   desc STM32 board definition
   parent CONFIG_ARCH_STM32
   flags internal
-  when CONFIG_BOARD_STM32_F401RE
-  single CONFIG_BOARD_STM32_F401RE
+  when CONFIG_BOARD_STM32_NUCLEOF401RE
+  single CONFIG_BOARD_STM32_NUCLEOF401RE
 %config end
 
-%config CONFIG_BOARD_STM32_F401RE
-  desc STM32 BOARD STM32F401RE
+%config CONFIG_BOARD_STM32_NUCLEOF401RE
+  desc STM32 Nucleo STM32F401RE board
   parent CONFIG_BOARD_STM32
-%config end
-
-%config CONFIG_DEVICE_HELPER_PREFIX
-  desc Device helper prefix
-  parent CONFIG_DEVICE
-  flags value
-%config end
-
-%init INIT_STM32_PRINTK_UART
-  parent CONFIG_STM32_PRINTK_UART
-  during INIT_MUTEK_PRINTK
-  function stm32_early_console_init
-%init end
-
-%init INIT_STM32_FREQ_SCALING
-  parent CONFIG_ARCH_STM32
-  during INIT_BOOTSTRAP
-  after INIT_MEMORY_SECTIONS
-  before INIT_STM32_PRINTK_UART
-  function stm32_freq_scaling_init
-%init end
-
-%config CONFIG_STM32_PRINTK_RATE
-  desc Baudrate used for STM32 early console
-  parent CONFIG_ARCH_EFM32
-  default 115200
-  flags value
+  depend CONFIG_STM32_F401
+  depend CONFIG_DRIVER_STM32_USART_PRINTK
 %config end
 
