added CONFIG_LIBC_PRINTF and CONFIG_LIBC_SCANF

--- a/libc/Makefile
+++ b/libc/Makefile
@@ -5,19 +5,19 @@ objs =						\
 string.o					\
 alloc.o						\
 intconv.o					\
-printf.o					\
-scanf.o	        				\
 rand.o						\
 error.o						\
 qsort.o						\
 stdlib.o					\
-unistd.o					\
-formatter.o
+unistd.o
 
 
 objs-$(CONFIG_LIBC_TIME) += time.o
 objs-$(CONFIG_LIBC_ASSERT) += assert.o
 objs-$(CONFIG_LIBC_STREAM) += stdio.o
+objs-$(CONFIG_LIBC_PRINTF) += printf.o
+objs-$(CONFIG_LIBC_SCANF) += scanf.o
+objs-$(CONFIG_LIBC_FORMATTER) += formatter.o
 objs-$(CONFIG_LIBC_FORMATTER_FLOAT) += formatter_float.o
 
 doc_headers = alloca.h assert.h ctype.h errno.h fcntl.h limits.h        \
