--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -164,7 +164,7 @@
   desc Provide printk() for kernel messages
   default defined
   parent CONFIG_MUTEK
-  depend CONFIG_LIBC_FORMATTER_PRINTF
+  depend CONFIG_LIBC_FORMATTER
   depend CONFIG_MUTEK_PRINTK_HANDLER
 %config end
 
