--- a/libc/libc.config
+++ b/libc/libc.config
@@ -88,36 +88,48 @@
   depend CONFIG_MUTEK_CONSOLE
 %config end
 
-%config CONFIG_LIBC_FORMATTER_PRINTF
+%config CONFIG_LIBC_FORMATTER
   parent CONFIG_LIBC
-  flags mandatory
+  flags auto
   desc Printf string formater algorithm
 %config end
 
 %config CONFIG_LIBC_FORMATTER_SIMPLE
-  parent CONFIG_LIBC_FORMATTER_PRINTF
+  parent CONFIG_LIBC_FORMATTER
   desc Reduce printk and printf functions formater algorithm features to bare minimum.
   suggest_when CONFIG_COMPILE_OPTIMIZE=s
 %config end
 
 %config CONFIG_LIBC_FORMATTER_FLOAT
   desc Provide floats support for printf related functions
-  parent CONFIG_LIBC_FORMATTER_PRINTF
+  parent CONFIG_LIBC_FORMATTER
   provide CONFIG_LICENSE_USE_GPL
   suggest_when CONFIG_LIBM
 %config end
 
 %config CONFIG_LIBC_FORMATTER_HEXDUMP
-  parent CONFIG_LIBC_FORMATTER_PRINTF
+  parent CONFIG_LIBC_FORMATTER
   flags auto
   desc Enable smart hexadecimal dump formater algorithm
 %config end
 
 %config CONFIG_LIBC_FORMATTER_DIV10
-  parent CONFIG_LIBC_FORMATTER_PRINTF
+  parent CONFIG_LIBC_FORMATTER
   desc Use compiler 64 bits divide and mod operations to output decimal numbers.
   desc This will rely on processor instructions or libgcc stuff. The default is
   desc to use a shift based algorithm instead.
+%config end
+
+%config CONFIG_LIBC_PRINTF
+  parent CONFIG_LIBC
+  depend CONFIG_LIBC_FORMATTER
+  default defined
+  desc printf family of functions
+%config end
+
+%config CONFIG_LIBC_SCANF
+  parent CONFIG_LIBC
+  desc scanf family of functions
 %config end
 
 ######################################################################
