--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -144,9 +144,22 @@
 %config CONFIG_MUTEK_SHELL
   parent CONFIG_MUTEK
   desc Enable support for mutek interactive command shell
-  depend CONFIG_MUTEK_CONSOLE
   depend CONFIG_LIBTERMUI_CONSOLE
 %config end
+
+%config CONFIG_MUTEK_SHELL_THREAD
+  parent CONFIG_MUTEK_SHELL
+  desc Creates a thread running the shell on the console at startup
+  depend CONFIG_MUTEK_CONSOLE
+  depend CONFIG_MUTEK_THREAD
+%config end
+
+%init INIT_MUTEK_SHELL_THREAD
+  parent CONFIG_MUTEK_SHELL_THREAD
+  during INIT_SMP
+  after INIT_MUTEK_CONSOLE
+  function mutek_shell_thread_init
+%init end
 
 %config CONFIG_MUTEK_LOGO
   desc Add builtin MutekH logo bitmap to the kernel
