drivers: add adxl345 driver for motion valio class

--- a/drivers/valio/valio.config
+++ b/drivers/valio/valio.config
@@ -9,3 +9,11 @@
   desc Enable DS3231 Calendar Clock ValIO driver
   depend CONFIG_DEVICE_VALIO
 %config end
+
+%config CONFIG_DRIVER_ADXL345
+  parent CONFIG_DRIVER
+  desc Enable ADXL345 accelerometer Valio driver
+  depend CONFIG_DEVICE_VALIO
+  depend CONFIG_DEVICE_I2C
+%config end
+
