Add valio simple button sub-class and generic push button driver

--- a/drivers/valio/valio.config
+++ b/drivers/valio/valio.config
@@ -17,3 +17,28 @@
   depend CONFIG_DEVICE_I2C
 %config end
 
+%config CONFIG_DRIVER_PUSH_BUTTON
+  parent CONFIG_DRIVER
+  desc Support for push button
+  depend CONFIG_DEVICE_VALIO
+%config end
+
+%config CONFIG_DRIVER_PUSH_BUTTON_TIMER
+  desc Support for timestamp in push button driver
+  parent CONFIG_DRIVER_PUSH_BUTTON
+  default defined
+%config end
+
+%config CONFIG_DRIVER_PUSH_BUTTON_SOFT_DEBOUNCING
+  desc Support for software debouncing in driver
+  parent CONFIG_DRIVER_PUSH_BUTTON
+  depend CONFIG_DRIVER_PUSH_BUTTON_TIMER
+  default undefined
+%config end
+
+%config CONFIG_DRIVER_PUSH_BUTTON_SOFT_DEBOUNCING_TIMING
+  desc Software debouncing lock time in ms
+  parent CONFIG_DRIVER_PUSH_BUTTON_SOFT_DEBOUNCING
+  flags value
+  default 10
+%config end
