--- a/drivers/valio/Makefile
+++ b/drivers/valio/Makefile
@@ -1,3 +1,5 @@
+objs-$(CONFIG_DRIVER_PUSH_BUTTON) += push_button.o
 objs-$(CONFIG_DRIVER_MTCH6102) += mtch6102.o
 objs-$(CONFIG_DRIVER_DS3231) += ds3231.o
 objs-$(CONFIG_DRIVER_ADXL345) += adxl345.o
+
