mutek: Update buffer pool definition

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -461,6 +461,7 @@
 %config CONFIG_MUTEK_BUFFER_POOL
   desc Enable use of packet pool allocator.
   parent CONFIG_MUTEK
+  flags auto
 %config end
 
 ######################################################################
