arch/nrf5x: Add ADC driver

--- a/arch/nrf5x/drivers/Makefile
+++ b/arch/nrf5x/drivers/Makefile
@@ -13,6 +13,7 @@ objs-$(CONFIG_DRIVER_NRF5X_BLE_RADIO) += ble_radio.o ble_radio_handler.o
 objs-$(CONFIG_DRIVER_NRF5X_RADIO) += radio.o
 objs-$(CONFIG_DRIVER_NRF5X_AES) += aes.o
 objs-$(CONFIG_DRIVER_NRF5X_RNG) += rng.o
+objs-$(CONFIG_DRIVER_NRF5X_ADC) += adc.o
 
 ifeq ($(CONFIG_DRIVER_NRF5X_BLE), defined)
 objs += ble.o ble_primitives.o
