arch/nrf5x: Add ADC driver

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -244,3 +244,11 @@
   parent CONFIG_ARCH_NRF5X
   depend CONFIG_DEVICE_CRYPTO
 %config end
+
+# ADC
+
+%config CONFIG_DRIVER_NRF5X_ADC
+  desc Enable nRF5x ADC driver
+  parent CONFIG_ARCH_NRF5X
+  depend CONFIG_DEVICE_VALIO_ADC
+%config end
