arch/nrf5x: Add ADC driver

--- a/arch/nrf5x/drivers/Makefile
+++ b/arch/nrf5x/drivers/Makefile
@@ -11,6 +11,7 @@ objs-$(CONFIG_DRIVER_NRF5X_RAM) += ram.o
 objs-$(CONFIG_DRIVER_NRF5X_TIMER) += timer.o
 objs-$(CONFIG_DRIVER_NRF5X_AES) += aes.o
 objs-$(CONFIG_DRIVER_NRF5X_RNG) += rng.o
+objs-$(CONFIG_DRIVER_NRF5X_ADC) += adc.o
 
 ifeq ($(CONFIG_DRIVER_NRF5X_BLE), defined)
 objs += ble.o ble_primitives.o
