arch/nrf51: Add ADC driver

--- a/arch/nrf51/drivers/drivers.config
+++ b/arch/nrf51/drivers/drivers.config
@@ -224,3 +224,11 @@
   parent CONFIG_ARCH_NRF51
   depend CONFIG_DEVICE_CRYPTO
 %config end
+
+# ADC
+
+%config CONFIG_DRIVER_NRF51_ADC
+  desc Enable nRF51 ADC driver
+  parent CONFIG_ARCH_NRF51
+  depend CONFIG_DEVICE_VALIO_ADC
+%config end
